--- a/apps/dashboard/src/app/account/account-kbs/account-kbs.component.html
+++ b/apps/dashboard/src/app/account/account-kbs/account-kbs.component.html
@@ -33,7 +33,7 @@
           </pa-button>
 
           <pa-button
-            *ngIf="!!kb.role_on_kb && isUsersEnabled | async"
+            *ngIf="!!kb.role_on_kb && (isUsersEnabled | async)"
             class="icon-button"
             icon="edit"
             aspect="basic"
