--- a/apps/dashboard/src/app/account/account-nua/client-dialog/client-dialog.component.html
+++ b/apps/dashboard/src/app/account/account-nua/client-dialog/client-dialog.component.html
@@ -44,7 +44,7 @@
         <p>{{ 'account.db_zone_description' | translate }}</p>
         <pa-select
           formControlName="zone"
-          [readonly]="zones?.length <= 1"
+          [readonly]="(zones || []).length <= 1"
           [label]="'generic.zone' | translate">
           <pa-option
             *ngFor="let zone of zones"
