--- a/apps/dashboard/src/app/account/billing/checkout/checkout.component.html
+++ b/apps/dashboard/src/app/account/billing/checkout/checkout.component.html
@@ -16,14 +16,14 @@
         aspect="basic"></pa-button>
     </div>
     <div class="section-body">
-      <div class="body-m">
-        {{ 'account.type.' + (accountType | async) | translate }}
+      <div
+        class="body-m"
+        *ngIf="accountType | async as accountType">
+        {{ 'account.type.' + accountType | translate }}
         -
         <ng-container *ngIf="currency | async as currency">
           <ng-container *ngIf="prices | async as prices">
-            {{ prices[accountType | async].recurring.month.price | currency: currency }}/{{
-              'billing.month' | translate
-            }}
+            {{ prices[accountType].recurring.month.price | currency: currency }}/{{ 'billing.month' | translate }}
           </ng-container>
         </ng-container>
       </div>
