--- a/apps/dashboard/src/app/activity/activity.component.html
+++ b/apps/dashboard/src/app/activity/activity.component.html
@@ -15,10 +15,10 @@
   </div>
 
   <div class="tab-content">
-    <app-activity-list [items]="(data | async).events"></app-activity-list>
+    <app-activity-list [items]="(data | async)?.['events'] || []"></app-activity-list>
     <div class="more-results">
       <pa-button
-        *ngIf="(data | async).pagination?.last === false"
+        *ngIf="(data | async)?.['pagination']?.last === false"
         kind="inverted"
         (click)="loadMoreEvents()">
         {{ 'search.more_results' | translate }}
