Fix paEllipsisTooltip usage in select-kb

--- a/libs/common/src/lib/select-account-kb/select-kb/select-kb.component.html
+++ b/libs/common/src/lib/select-account-kb/select-kb/select-kb.component.html
@@ -11,7 +11,7 @@
 
     <h2
       class="select-kb-title"
-      [paEllipsisTooltip]="account.title">
+      paEllipsisTooltip>
       {{ account.title }}
     </h2>
 
