--- a/apps/dashboard/src/app/account/billing/checkout/checkout.component.html
+++ b/apps/dashboard/src/app/account/billing/checkout/checkout.component.html
@@ -18,12 +18,12 @@
     <div class="section-body">
       <div
         class="body-m"
-        *ngIf="accountType | async as accountType">
-        {{ 'account.type.' + accountType | translate }}
+        *ngIf="accountType | async as account">
+        {{ 'account.type.' + account | translate }}
         -
         <ng-container *ngIf="currency | async as currency">
           <ng-container *ngIf="prices | async as prices">
-            {{ prices[accountType].recurring.month.price | currency: currency }}/{{ 'billing.month' | translate }}
+            {{ prices[account].recurring.month.price | currency: currency }}/{{ 'billing.month' | translate }}
           </ng-container>
         </ng-container>
       </div>
