--- a/apps/dashboard/src/app/account/billing/checkout/checkout.component.html
+++ b/apps/dashboard/src/app/account/billing/checkout/checkout.component.html
@@ -21,8 +21,8 @@
         *ngIf="accountType | async as account">
         {{ 'account.type.' + account | translate }}
         -
-        <ng-container *ngIf="currency | async as currency">
-          <ng-container *ngIf="prices | async as prices">
+        <ng-container *ngIf="currency$ | async as currency">
+          <ng-container *ngIf="prices$ | async as prices">
             {{ prices[account].recurring.month.price | currency: currency }}/{{ 'billing.month' | translate }}
           </ng-container>
         </ng-container>
