--- a/apps/desktop/src/app/main-layout/topbar.component.html
+++ b/apps/desktop/src/app/main-layout/topbar.component.html
@@ -18,7 +18,7 @@
   </div>
   <div class="accounts">
     <pa-button
-      *ngIf="account | async as account"
+      *ngIf="account$ | async as account"
       size="small"
       kind="inverted"
       (click)="goSelect()">
